# devenv

./: .gitignore  .gitmodules  docker-compose.yaml
repositories/python-hello/: README.md  pyproject.toml
